[gd_scene load_steps=8 format=3 uid="uid://jc61dtc3w8cm"]

[ext_resource type="Script" uid="uid://be5kijbvvmnaf" path="res://addons/CustomControls/Dialogs/Select_one_data_dialog.gd" id="1_0854v"]
[ext_resource type="Theme" uid="uid://dkrs350vaq2kh" path="res://addons/RPGMap/Assets/Themes/dialog_theme.tres" id="1_plxk3"]
[ext_resource type="PackedScene" uid="uid://bnx7omk3joxly" path="res://addons/CustomControls/custom_button.tscn" id="2_jp80e"]
[ext_resource type="Script" uid="uid://d0kowhkcjb7kv" path="res://addons/CustomControls/custom_option_button.gd" id="3_wa6ym"]
[ext_resource type="PackedScene" uid="uid://bj48rsidmna6s" path="res://addons/CustomControls/custom_spin_box.tscn" id="4_0pnnt"]

[sub_resource type="Gradient" id="Gradient_4u2ec"]
colors = PackedColorArray(0.184314, 0.2, 0.207843, 1, 0.278431, 0.294118, 0.301961, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_2idcj"]
gradient = SubResource("Gradient_4u2ec")
fill_from = Vector2(0.5, 1)
fill_to = Vector2(0.5, 0)

[node name="SelectOneDataDialog" type="Window"]
oversampling_override = 1.0
title = "Title"
size = Vector2i(360, 203)
wrap_controls = true
transient = true
exclusive = true
unresizable = true
theme = ExtResource("1_plxk3")
script = ExtResource("1_0854v")

[node name="Background" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_2idcj")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="DataTitle" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Title:"

[node name="Options" type="OptionButton" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_default_cursor_shape = 2
text_overrun_behavior = 3
clip_text = true
item_count = 1
popup/item_0/text = "Data List"
popup/item_0/id = 0
script = ExtResource("3_wa6ym")

[node name="LevelTitle" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Equipment Level:"

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Level" parent="MarginContainer/VBoxContainer/HBoxContainer2" instance=ExtResource("4_0pnnt")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Level that the equipment to be installed will have"
min_value = 1.0
value = 1.0

[node name="MaxLevels" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "/ 0"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
alignment = 1

[node name="OKButton" parent="MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource("2_jp80e")]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "OK"

[node name="CancelButton" parent="MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource("2_jp80e")]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "CANCEL"

[connection signal="item_selected" from="MarginContainer/VBoxContainer/Options" to="." method="_on_options_item_selected"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/OKButton" to="." method="_on_ok_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/CancelButton" to="." method="_on_cancel_button_pressed"]
